test/test_examples/syntactic_examples/syntax_error/error_fun_def_02.zig
// Syntax error: missing "fn" token

const ifj = @import("ifj24.zig"); 

pub main() void {

}  